Backend complete on Approve or Reject Employee Resignation (Admin)

--- a/backend/src/.env
+++ b/backend/src/.env
@@ -1,3 +1,5 @@
-MONGODB_URI=mongodb://localhost:27017/xexit
+PORT=8080
+MONGODB_URI=mongodb://localhost:27017/exitease
 JWT_SECRET=test123
-JWT_ACCESS_EXPIRATION_MINUTES=30
+JWT_ACCESS_EXPIRATION_MINUTES=30   
+CALENDARIFIC_API_KEY=4thRGnKTNciqM0JZZEjwWiVIqDYRY9kO
